--- a/index.html
+++ b/index.html
@@ -196,19 +196,19 @@ Blockchain is a distributed ledger that <br> records all transactions across a n
         Earn up to 24% in rewards anually  by staking your assets with Investco.  It only takes a few clicks to stake. <br><br>
         <div class="tabs">
           <div class="tab1">
-            <img src="" alt=""><br>
+            <img src="./css/images/tezos-cryptocurrency-icon-512x512-noyem1qz.png" alt=""><br>
             <h4>Tezos</h4>
             Yearly rewards <br>
             <p class="smalltext">4-7% flexible</p>
           </div><br>
           <div class="tab2">
-            <img src="" alt=""><br>
+            <img src="./css/images/images (1).png" alt=""><br>
             <h4>Cardona</h4>
             Yearly rewards <br>
             <p class="smalltext">3-6% flexible</p>
           </div><br>
           <div class="tab3">
-            <img src="" alt=""><br>
+            <img src="./css/images/polkadot-cryptocurrency-icon-512x512-ik5ji7r8.png" alt=""><br>
             <h4>Polkadot</h4>
             Yearly rewards <br>
             <p class="smalltext">7-11% flexible <br>15-21% Bonded 28D
@@ -219,19 +219,19 @@ Blockchain is a distributed ledger that <br> records all transactions across a n
         <br>
         <div class="tabs">
           <div class="tab1">
-            <img src="" alt=""><br>
+            <img src="./css/images/images (2).png" alt=""><br>
             <h4>Mina</h4>
             Yearly rewards <br>
             <p class="smalltext">8-13% flexible</p>
           </div><br>
           <div class="tab2">
-            <img src="" alt=""><br>
+            <img src="./css/images/flow-flow-logo.png" alt=""><br>
             <h4>Flow</h4>
             Yearly rewards <br>
             <p class="smalltext">1-4% flexible <br>6-10% Bonded 14D</p>
           </div><br>
           <div class="tab3">
-            <img src="" alt=""><br>
+            <img src="./css/images/images (3).jpeg" alt=""><br>
             <h4>Solana</h4>
             Yearly rewards <br>
             <p class="smalltext">2-4% flexible <br>5-7% Bonded 3D</p>
@@ -240,25 +240,25 @@ Blockchain is a distributed ledger that <br> records all transactions across a n
         <br>
         <div class="tabs">
           <div class="tab1">
-            <img src="" alt=""><br>
+            <img src="./css/images/images (2).jpeg" alt=""><br>
             <h4>Tron</h4>
             Yearly rewards <br>
             <p class="smalltext">1-4% flexible</p>
           </div><br>
           <div class="tab2">
-            <img src="" alt=""><br>
+            <img src="./css/images/cosmos-cryptocurrency-icon-512x512-jznx14o4.png" alt=""><br>
             <h4>Cosmos</h4>
             Yearly rewards <br>
             <p class="smalltext">4-8% flexible <br>11-15% Bonded 21D</p>
           </div><br>
           <div class="tab3">
-            <img src="" alt=""><br>
+            <img src="./css/images/images.png" alt=""><br>
             <h4>Kusama</h4>
             Yearly rewards <br>
             <p class="smalltext">5-9% flexible <br>13-18% Bonded 7D</p>
           </div>
         </div><br><br>
-        <a href="#"><button>Start earning today</button></a>
+        <a href="#"><button style="background-color: #192964; color: white;">Start earning today</button></a>
       </div>
     </div>
   </div>
