--- a/index.html
+++ b/index.html
@@ -265,6 +265,39 @@ Blockchain is a distributed ledger that <br> records all transactions across a n
     </div>
   </div>
 
+  <div class="container8">
+    <di class="text">
+      <div class="subtext">
+        <img src="./css/images/GOOGLELOGO_1.jpg" alt="">
+      </div>
+      <div class="subtext">
+        <img src="./css/images/Sap.png" alt="">
+      </div>
+      <div class="subtext">
+        <img src="./css/images/Up.png" alt="">
+      </div>
+      <div class="subtext">
+        <img src="./css/images/visa_6422278.svg" alt="">
+      </div>
+      <div class="subtext">
+        <img src="./css/images/60f6904f3100291a29237c81_Bittrex.png" alt="">
+      </div>
+    </di>
+  </div>
+
+  <div class="container9">
+    <div class="text">
+      <div class="logo"><img src="./css/images/LOGO.svg" alt="" style="width: 6rem;"></div>
+      <p class="headtext">Take your Crypto trading to the next level</p> <br>
+      <a href="#"><button style="background-color: #192964; color: white;">Get started with Investco</button></a><br><br>
+      <p> Crypto investment rewards are subject to change and compliance with Investco's terms and conditions. These materials are for general information purposes only and are not investment advice or recommendation for solicitation to buy, sell, stake or hold any cryptoasset or to engage in any specific trading strategy. <br> <br> Some crypto products and markets are unregulated, anf you may not be protected by government compensations and/or regulatory protection schemes. The unpredictable nature of the cryptoasset markets can lead to loss of funds. Tax may be payable on any return and/or on any increase in the value of your cryptoassets and you should seek independent advice on your taxation position. <br><br>
+      Trading futures, derivatives and other instruments using leverage involves an element of risk and any may not be suitable for everyone.</p>
+      <br><br>
+      <a href="#"><button>Create account</button></a>
+      <a href="#"><button style="background-color: #192964; color: white;">Sign in</button></a>
+    </div>
+  </div>
+
 
   
 
