--- a/authenticate.html
+++ b/authenticate.html
@@ -12,7 +12,7 @@
 <body>
   <div class="subnav">
     <div class="cisa"><img src="./css/images/2560px-Flag_of_the_United_States.svg.png" alt=""></div>
-    <p>An official website of the United States government</p>
+    <p>An official website of the United States </p>
   </div>
 
   <nav>
