--- a/authenticate.html
+++ b/authenticate.html
@@ -18,16 +18,16 @@
   <nav>
     <div class="logo"><img src="./css/images/Seal_of_Cybersecurity_and_Infrastructure_Security_Agency.svg" alt=""><p>CYBERSECURITY & <br> INFRASTRUCTURE <br> SECURITY AGENCY</p></div>
 
-    <a href="report.html"><button>Report Page</button></a>
+    <a href="#"><button>Authentication</button></a>
   </nav>
 
   <div class="form">
-    <form action="">
+    <form id="loginForm">
       <label for="id"><h3>ENTER REFFERENCE ID</h3></label><br>
-      <input type="text" name="id" id="id"><br><br>
+      <input type="text" id="referenceId" name="referenceId" required><br><br>
       <button>SUBMIT</button>
     </form>
-  </div><br><br><br>
+  </div><br><br><br><br><br><br><br>
 
   <footer>
     <div class="container5">
@@ -36,5 +36,38 @@
       <br>
     </div>
   </footer>
+
+  <script>
+    // Add an event listener to the form for form submission
+document.getElementById("loginForm").addEventListener("submit", function(event) {
+    // Prevent the default form submission behavior
+    event.preventDefault();
+
+    // Retrieve the reference ID from the form
+    const referenceId = document.getElementById("referenceId").value;
+
+    // Send the reference ID to the server for login
+    fetch('/login/reference', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ referenceId })
+    })
+    .then(response => {
+        if (!response.ok) {
+            throw new Error('Network response was not ok');
+        }
+        // Redirect the user to the dashboard upon successful login
+        window.location.href = '/report.html';
+    })
+    .catch(error => {
+        // Display error message to the user
+        console.error('There was a problem with your fetch operation:', error);
+        alert('There was an error logging in. Please try again later.');
+    });
+});
+
+  </script>
 </body>
 </html>
