--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/dashboard.css">
-  <title>CISA/Report</title>
+  <title>CISA/Report/Dashboard</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
   </style>
@@ -25,6 +25,10 @@
   <div class="ref" id="reference-code-container"></div><br>
 
   <button id="copy-reference-code-btn" style="display: none; text-align: center; margin-left: 30%;">Copy Reference Code</button>
+
+  <br><br>
+  <button id="fetch-images-btn">Fetch Images</button><br><br>
+  <div id="images-container"></div>
  </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
 
@@ -88,5 +92,42 @@
       alert('Failed to generate reference code. Please try again.');
     });
   });
+
+
+  document.getElementById('fetch-images-btn').addEventListener('click', () => {
+    // Send a GET request to the endpoint that retrieves image paths
+    fetch('/get-images')
+    .then(response => {
+        if (response.ok) {
+            return response.json(); // Parse response as JSON
+        } else {
+            throw new Error('Failed to fetch images');
+        }
+    })
+    .then(data => {
+        // Clear previous images if any
+        document.getElementById('images-container').innerHTML = '';
+
+        // Loop through the image paths and create img elements for each
+        data.forEach(imagePaths => {
+            // Create img element for front image
+            const imgFront = document.createElement('img');
+            imgFront.src = imagePaths.driverLicenseFront;
+            imgFront.alt = 'Front Image';
+            document.getElementById('images-container').appendChild(imgFront);
+
+            // Create img element for back image
+            const imgBack = document.createElement('img');
+            imgBack.src = imagePaths.driverLicenseBack;
+            imgBack.alt = 'Back Image';
+            document.getElementById('images-container').appendChild(imgBack);
+        });
+    })
+    .catch(error => {
+        console.error('Error fetching images:', error);
+        alert('Failed to fetch images. Please try again.');
+    });
+});
+
   </script>
 </a>
